# learning

./: Generics.hs  cabal.project  default.nix  shell.nix
dfs/: DFS.hs  README.md  dfs-bench.html  dfs.cabal
generics/: Generics.hs  README.md  generics.cabal
nix/: sources.json
representable/: Representable.hs
