cabal-version:      2.4
name:               dfs
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Matt Wittmann
maintainer:         mcwitt@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   .
  build-depends:
    , array       ^>=0.5.4
    , base        ^>=4.13.0
    , containers  ^>=0.6.2
    , hspec       ^>=2.7.1
    , mtl         ^>=2.2.2
    , mwc-random  ^>=0.14.0
    , primitive   ^>=0.7.1
    , statistics  ^>=0.15.2

  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates
