cabal-version:      2.4
name:               dfs
version:            0.1.0.0
license:            MIT
maintainer:         mcwitt@gmail.com
author:             Matt Wittmann
build-type:         Simple
extra-source-files: CHANGELOG.md

executable dfs-bench
  hs-source-dirs:   .
  main-is:          DFS.hs
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates
  build-depends:
    , base             ^>=4.13
    , containers       >=0.6.2  && <=0.7
    , criterion        ^>=1.5.7
    , deepseq          ^>=1.4.4
    , hspec            >=2.7.4  && <=2.8
    , mtl              >=2.2.2  && <=2.3
    , mwc-probability  ^>=2.3
    , mwc-random       ^>=0.15
    , primitive        >=0.7.1  && <=0.8
    , vector           >=0.12.1 && <=0.13
