cabal-version:      2.4
name:               dfs
version:            0.1.0.0
license:            MIT
maintainer:         mcwitt@gmail.com
author:             Matt Wittmann
build-type:         Simple
extra-source-files: CHANGELOG.md

executable dfs-bench
  hs-source-dirs:   .
  main-is:          DFS.hs
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates
  build-depends:
    , base
    , containers
    , criterion
    , deepseq
    , hashable
    , hashtables
    , hspec
    , mtl
    , mwc-probability
    , mwc-random
    , primitive
    , vector
