cabal-version:      2.4
name:               generics
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Matt Wittmann
maintainer:         mcwitt@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   .
  build-depends:    base
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates
